# analytics-platform-ops

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  circle.yml  gitcrypt-merge-tool.sh  modify-elb.sh
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
auth0/: auth0-authorization-extension.js
aws/: VPCCloudFormationStack.json  cluster.yaml
charts/: README.md
env-ingress/: kube-dashboard.yml
git-crypt/: README.md  keys.txt  remove-gpg-users.sh  rotate-gpg-keys.sh
infra/: create_environment.sh  create_k8s_cluster.sh  create_tf_resources.sh  destroy_environment.sh  ingress_elb_create_dns.sh  ingress_elb_set_proxy_mode.sh  ingress_load_balancer_create_dns.sh  install_helm_charts.sh
jenkinsfiles/: config_user.groovy  config_user.sh  create_auth0_user.groovy  create_auth0_user.sh  create_homedirs_k8s_volume.groovy  create_rstudio_config.groovy  create_user.groovy  create_user.sh  delete_user.groovy  delete_user.sh  deploy_jupyter_for_user.groovy  deploy_rstudio_for_user.groovy  deploy_rstudio_for_user.sh  deploy_shiny_app.groovy  deploy_shiny_app.sh  grant_access_to_app.groovy
k8s-templates/: create-user-global-resources.sh  create-user-jupyter-notebook.sh  create-user-namespace-resources.sh  create-user-rstudio.sh
r-studio-pro/: Dockerfile  createusers.sh  (+2 more)
scripts/auth0connections/: .gitignore  README.md  auth0connections.py  pyproject.toml  values.example.yaml
scripts/auth0connections/connection_templates/hmpps-auth/: config.yaml
scripts/auth0connections/connections/nomis/: config.yaml  fetchUserProfile.js
(+819 files in other folders)
