[tool.poetry]
name = "auth0connections"
version = "0.1.0"
description = "Sync connections with Auth0 Management API"
authors = ["Ravi Kotecha <ravi.kotecha@digital.justice.gov.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
auth0-python = "^3.7"
environs = "^4.1"
jinja2 = "^2.10"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
ipython = "^7.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
